add new similarity

--- a/test_epinion80.ipynb
+++ b/test_epinion80.ipynb
@@ -9,7 +9,7 @@
     "from utility.cross_validation import split_5_folds\n",
     "# from configx.configx_epinion_80 import ConfigX as EP80\n",
     "from configx.configx_epinion_80 import ConfigX as ConfigXep80\n",
-    "from model.social_reg import mainSocialReg"
+    "from model.social_reg_ALLET_BESSET import soc_reg"
    ]
   },
   {
@@ -28,23 +28,6 @@
    "outputs": [],
    "source": [
     "split_5_folds(configxEP80)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "data/cv/epinion_80/\n"
-     ]
-    }
-   ],
-   "source": [
-    "print(configxEP80.rating_cv_path)"
    ]
   },
   {
@@ -136,7 +119,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (main, Aug 25 2022, 23:51:50) [MSC v.1916 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
