--- a/parallelism.ipynb
+++ b/parallelism.ipynb
@@ -2,13 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "2dc619ca",
    "metadata": {},
    "outputs": [],
    "source": [
     "from utility.cross_validation import split_5_folds\n",
-    "from configx.configx_epinion_80 import ConfigX as Ep80\n",
+    "from configx.configx_delicious import ConfigX as deli\n",
+    "from configx.configx_epinion_80 import ConfigX as ep80\n",
     "from parallel import para\n",
     "import sys"
    ]
@@ -28,45 +29,26 @@
       "ep -fold2 data generated finished!\n",
       "ep -fold3 data generated finished!\n",
       "ep -fold4 data generated finished!\n",
-      "ep -fold5 data generated finished!\n",
-      "ep -fold6 data generated finished!\n",
-      "ep -fold7 data generated finished!\n",
-      "ep -fold8 data generated finished!\n",
-      "ep -fold9 data generated finished!\n",
-      "ep -fold10 data generated finished!\n",
-      "ep -fold11 data generated finished!\n",
-      "All Data Generated Done!\n"
+      "All Data Generated Done!\n",
+      "début\n"
      ]
     }
    ],
    "source": [
-    "ep=Ep80()\n",
+    "ep=ep80()\n",
+    "\n",
     "split_5_folds(ep)\n",
-    "para(ep,True)"
+    "\n",
+    "para(ep,True)\n",
+    "\n",
+    "\n",
+    "\n"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "d38a947c",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "a3081720",
-   "metadata": {
-    "scrolled": true
-   },
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "231fcc20",
+   "id": "57b9b417",
    "metadata": {},
    "outputs": [],
    "source": []
@@ -89,6 +71,11 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.9.13"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "03120f9d26cdbd64e78d70cf85896cfac1f139c75de9cb66e280e3122daaa113"
+   }
   }
  },
  "nbformat": 4,
