--- a/parallelism.ipynb
+++ b/parallelism.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "af0af897",
    "metadata": {},
    "outputs": [
@@ -24,22 +24,39 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "ep -fold0 data generated finished!\n",
-      "ep -fold1 data generated finished!\n",
-      "ep -fold2 data generated finished!\n",
-      "ep -fold3 data generated finished!\n",
-      "ep -fold4 data generated finished!\n",
+      "deli -fold0 data generated finished!\n",
+      "deli -fold1 data generated finished!\n",
+      "deli -fold2 data generated finished!\n",
+      "deli -fold3 data generated finished!\n",
+      "deli -fold4 data generated finished!\n",
       "All Data Generated Done!\n",
-      "début\n"
+      "Début des calculs en parallèle\n",
+      "The average of RMSES is 3.109015315781247\n",
+      "The average of MAES is 1.9077434114522045\n",
+      "Total execution time : 723.7834331989288 seconds\n"
+     ]
+    },
+    {
+     "ename": "FileExistsError",
+     "evalue": "[Errno 17] File exists: 'res.txt'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mFileExistsError\u001b[0m                           Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_16356/1266677442.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;31m#Lancement de la parallélisation du programme pour les calculs\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[0mpara\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mconfig\u001b[0m\u001b[1;33m,\u001b[0m\u001b[0mverbose\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;32mD:\\Documents\\Post Bac\\FAC\\Paul Sab\\Master\\M2\\S9\\graphs\\Projet\\code\\mini-projet_graph_ALLET_BESSET\\parallel.py\u001b[0m in \u001b[0;36mpara\u001b[1;34m(config, verbose)\u001b[0m\n\u001b[0;32m     62\u001b[0m     \u001b[0mPath\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres_dir\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmkdir\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mparents\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mexist_ok\u001b[0m\u001b[1;33m=\u001b[0m\u001b[1;32mTrue\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     63\u001b[0m     \u001b[1;32mif\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;32mnot\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mos\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mpath\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mexists\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres_dir\u001b[0m\u001b[1;33m+\u001b[0m\u001b[1;34m\"/res.txt\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m---> 64\u001b[1;33m         \u001b[0mf\u001b[0m\u001b[1;33m=\u001b[0m\u001b[0mopen\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;34m'res.txt'\u001b[0m\u001b[1;33m,\u001b[0m\u001b[1;34m\"x\"\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m     65\u001b[0m         \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mwritelines\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mres_str\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m     66\u001b[0m         \u001b[0mf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mclose\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mFileExistsError\u001b[0m: [Errno 17] File exists: 'res.txt'"
      ]
     }
    ],
    "source": [
-    "ep=ep80()\n",
+    "#Sélection de la configuration entre deli() pour Delicious et ep80() pour Epinion\n",
+    "config=deli()\n",
     "\n",
-    "split_5_folds(ep)\n",
+    "split_5_folds(config)\n",
     "\n",
-    "para(ep,True)\n",
+    "#Lancement de la parallélisation du programme pour les calculs\n",
+    "para(config,verbose=True)\n",
     "\n",
     "\n",
     "\n"
@@ -49,6 +66,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "57b9b417",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "b40ff6e2",
    "metadata": {},
    "outputs": [],
    "source": []
