--- a/test_global.ipynb
+++ b/test_global.ipynb
@@ -102,6 +102,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[(25, 30), (49, 50), (35, 35), (28, 28)]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "top_k=[(25,30),(49,50)]\n",
+    "top_k2=[(35,35),(28,28)]\n",
+    "top=top_k+top_k2\n",
+    "print(top)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
@@ -110,7 +131,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -124,11 +145,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.9.13 (tags/v3.9.13:6de2ca5, May 17 2022, 16:36:42) [MSC v.1929 64 bit (AMD64)]"
   },
   "vscode": {
    "interpreter": {
-    "hash": "7aa9664549af0dc77d4ddcb12a5c1f8e5a941fbf799eb3e4eff06ef45fdce330"
+    "hash": "03120f9d26cdbd64e78d70cf85896cfac1f139c75de9cb66e280e3122daaa113"
    }
   }
  },
